Fixed alignment of more/less link;
reset color to match link color.

--- a/sugarcrm/styleguide/less/sugar-specific/misc.less
+++ b/sugarcrm/styleguide/less/sugar-specific/misc.less
@@ -28,8 +28,11 @@
 }
 
 .more, .less {
-  //margin: 0 20px 20px;
-  color: @linkMore;
+  &.padded {
+    padding: 8px 20px;
+    display: inline-block;
+  }
+  //color: @linkMore;
   &:hover {
     color: @linkMore;
     text-decoration: none;
